--- a/src/main/resources/com/example/buscaminas/hello-view.fxml
+++ b/src/main/resources/com/example/buscaminas/hello-view.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="416.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="416.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label alignment="CENTER" layoutX="102.0" layoutY="70.0" prefHeight="38.0" prefWidth="280.0" text="BUSCAMINAS">
          <font>
@@ -20,6 +18,5 @@
       </Label>
       <Button layoutX="168.0" layoutY="215.0" mnemonicParsing="false" text="FÁCIL" />
       <Button layoutX="257.0" layoutY="215.0" mnemonicParsing="false" text="DIFÍCIL" />
-      <Button layoutX="191.0" layoutY="302.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="102.0" text="JUGAR" />
    </children>
 </AnchorPane>
